# llm-hackathon-2024

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
Stream/: app.py
challenges/: labbook.md  xrd.md
playground/: datalab-api-examples.ipynb  plot_financial.py  summarise_public_datalab.py
prompts/: datalab-api-prompt.md
streamlit_app/: app.py  streamlit_callback.py  tools.py
