[project]
name = "llm-hackathon-2024"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datalab-api >= 0.2.7",
    "codeinterpreterapi[all] == 0.1.17",
    "codeboxapi @ git+https://github.com/ml-evs/codebox-api@f15ffc9",
    "pip",
    "langchain-anthropic == 0.1.11",
    "anthropic == 0.25.8",
    "httpx ~= 0.27",
    "langchain == 0.1.19",
    "matplotlib",
    "streamlit == 1.34.00",
    "numexpr==2.10.0",
]
